Fix ANSIBLE_SYNC stage configuration for PipeCD scheduler
- Convert stage with configuration to JSON format
- Scheduler expects stage configuration as JSON byte array
- This resolves 'Unable to find the stage configuration' error

--- a/examples/app.pipecd.yaml
+++ b/examples/app.pipecd.yaml
@@ -19,8 +19,10 @@ spec:
           deployment_time: "{{ ansible_date_time.iso8601 }}"
   
   # Simple pipeline for testing
-#  pipeline:
-#    stages:
-#      - name: ANSIBLE_SYNC
-#        with:
-#          timeout: 300  
+  pipeline:
+    stages:
+      - name: ANSIBLE_SYNC
+        with: |
+          {
+            "timeout": 300
+          }  
