--- a/examples/app.pipecd.yaml
+++ b/examples/app.pipecd.yaml
@@ -1,5 +1,5 @@
 apiVersion: pipecd.dev/v1beta1
-kind: Application
+kind: KubernetesApp
 spec:
   name: ansible-test-app
   description: Test application using Ansible plugin with remote SSH connection
